crates/math-core/tests/snapshots/conversion_test__sine_after_middle.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\left(a\\middle|\\sin x\\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mi>a</mi>
        <mo stretchy="true" lspace="0" rspace="0">|</mo>
        <mrow>
            <mrow><mspace/><mi>sin</mi></mrow>
            <mo lspace="0.1667em">&ApplyFunction;</mo>
            <mi>x</mi>
        </mrow>
        <mo>)</mo>
    </mrow>
</math>
