crates/math-core/tests/snapshots/conversion_test__sine_alone_in_group.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x{\\sin}y"
---
<math>
    <mi>x</mi>
    <mrow><mspace/><mi>sin</mi></mrow>
    <mi>y</mi>
</math>
