crates/math-core/tests/snapshots/conversion_test__sine_alone_in_group_with_sub.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x{\\sin}_1 y"
---
<math>
    <mi>x</mi>
    <msub>
        <mrow>
            <mo lspace="0" rspace="0">sin</mo>
        </mrow>
        <mn>1</mn>
    </msub>
    <mi>y</mi>
</math>
