crates/math-core/tests/snapshots/conversion_test__sine_at_group_end.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{x\\sin}x"
---
<math>
    <mrow>
        <mi>x</mi>
        <mspace width="0.1667em"/>
        <mrow><mspace/><mi>sin</mi></mrow>
    </mrow>
    <mi>x</mi>
</math>
