crates/math-core/tests/snapshots/conversion_test__sine_at_group_start.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x{\\sin x}"
---
<math>
    <mi>x</mi>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mi>x</mi>
    </mrow>
</math>
