crates/math-core/tests/snapshots/conversion_test__sine_at_left.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\left(\\sin x\\right)"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo lspace="0.1667em">(</mo>
        <mrow>
            <mrow><mspace/><mi>sin</mi></mrow>
            <mo lspace="0.1667em">&ApplyFunction;</mo>
            <mi>x</mi>
        </mrow>
        <mo>)</mo>
    </mrow>
</math>
