crates/math-core/tests/snapshots/conversion_test__sine_at_right.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\left(x\\sin \\right)x"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mspace width="0.1667em"/>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo>)</mo>
    </mrow>
    <mi>x</mi>
</math>
