crates/math-core/tests/snapshots/conversion_test__sine_followed_by_punctuation.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin ; x, \\cos x; y"
---
<math>
    <mrow><mspace/><mi>sin</mi></mrow>
    <mo>;</mo>
    <mi>x</mi>
    <mo>,</mo>
    <mrow>
        <mrow><mspace/><mi>cos</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mi>x</mi>
    </mrow>
    <mo>;</mo>
    <mi>y</mi>
</math>
