crates/math-core/tests/snapshots/conversion_test__sine_function.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin x"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mi>x</mi>
    </mrow>
</math>
