crates/math-core/tests/snapshots/conversion_test__sine_function_parens.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin(x)"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0">&ApplyFunction;</mo>
        <mrow>
            <mo stretchy="false">(</mo>
            <mi>x</mi>
            <mo stretchy="false">)</mo>
        </mrow>
    </mrow>
</math>
